Fix bulk invite layout bug

--- a/sass/modules/village/_forms.scss
+++ b/sass/modules/village/_forms.scss
@@ -106,7 +106,7 @@ $label-colors: $yellow $orange $magenta $violet $cyan $green
 // Add/Edit Village
 
 .group-add-form, .group-edit-form { @extend %village-solo-page; }
-.village-add-form, .village-edit-form { @extend %village-solo-page; }
+.village-add-form, .village-edit-form, .bulk-signup { @extend %village-solo-page; }
 
 @include establish-tabs(english spanish);
 
